# palimpsest

./: .env.example  README.md  create_pali_issues.py  pyproject.toml  requirements.txt  sync_items.py
config/: pali_items.yaml
