[project]
name = "palimpsest"
version = "0.1.0"
description = "AI-driven Palimpsest engine for turning public domain books into structured codices, videos, and new mythologies"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Vishnu Surya" }
]
dependencies = [
    "certifi>=2025.11.12",
    "charset-normalizer>=3.4.4",
    "idna>=3.11",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "urllib3>=2.6.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
]

[tool.uv.workspace]
members = []

[tool.uv]
package = false

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
